welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:14: error: not found: value diago
		else {if (diago > (getMondeHauteur() + getMondeLargeur() - 1 ) /2)
                          ^Diagonal:16: error: not found: value diago
					x = diago-6
                                            ^